fixed filter button color on ios

--- a/style.css
+++ b/style.css
@@ -224,4 +224,5 @@ body {
     border: none;
     min-width: 150px;
  -webkit-appearance: none;
+	background: #d7d7d7;
 }
